# Habits

./: .env.example  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py  views.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
telegram/: services.py
templates/: index.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_telegram_id.py
